bk_ida/gccida/c0/print_exp
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:690:8: error: use of undeclared identifier 'arg0'
sep = &arg0; 
       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:713:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:724:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:732:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:744:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:750:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:759:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:764:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:769:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:774:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:779:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:784:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:789:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:794:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:803:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:808:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:813:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:818:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/sched-vis.c:823:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
op[1] = ( rtx)xa[1]; 
              ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_exp/src/obj/sched-vis.o] Error 1
